atualizei a localização na introdução.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <img src="./img/perfil.jpg" alt="Lobo Cinza" width="360" height="520">
     <div>
       <h1>Desenvolvedor<br>Front End &<br>UX/UI Designer</h1>
-      <p>Localizado em Taubaté 🏖</p>
+      <p>Localizado em Taubatexas 🏖</p>
     </div>
   </main>
 
